[gd_scene load_steps=68 format=3 uid="uid://chptbuqgr7qyt"]

[ext_resource type="Script" uid="uid://n35k36oc5i6u" path="res://scripts/enemies/slime.gd" id="1_68p8s"]
[ext_resource type="PackedScene" uid="uid://bg7nrwxlpxf3p" path="res://scenes/core/base_damage_zone.tscn" id="2_68p8s"]
[ext_resource type="Texture2D" uid="uid://mqmm0ytehpti" path="res://assets/sprites/enemies/slime/slime-attack.png" id="2_ikdmk"]
[ext_resource type="Texture2D" uid="uid://b0c4p7qgu22yt" path="res://assets/sprites/enemies/slime/slime-fall.png" id="3_jjup5"]
[ext_resource type="Texture2D" uid="uid://bqo4nv5fjoevl" path="res://assets/sprites/enemies/slime/slime-death.png" id="3_wfyvu"]
[ext_resource type="Texture2D" uid="uid://c7uw5sw3daps0" path="res://assets/sprites/enemies/slime/slime-idle.png" id="4_mdcui"]
[ext_resource type="Texture2D" uid="uid://cmiijc04jyy37" path="res://assets/sprites/enemies/slime/slime-patrol.png" id="5_ikdmk"]
[ext_resource type="Texture2D" uid="uid://dkhvgs4m8tdu" path="res://assets/sprites/enemies/slime/slime-take-damage.png" id="7_at850"]
[ext_resource type="Script" uid="uid://bcoqv8smpfvig" path="res://scripts/states/state_machines/state_machine.gd" id="9_nx7r3"]
[ext_resource type="Script" uid="uid://ct14p13yajhmc" path="res://scripts/states/generic_states/idle_state.gd" id="11_tvrjd"]
[ext_resource type="Script" uid="uid://ccjqnofia5vo0" path="res://scripts/states/generic_states/jump_state.gd" id="12_rdhaw"]
[ext_resource type="Script" uid="uid://clv1jjvxgs12w" path="res://scripts/states/generic_states/fall_state.gd" id="13_m4uwr"]
[ext_resource type="Script" uid="uid://dl4e74spycbcb" path="res://scripts/states/generic_states/move_state.gd" id="13_nx7r3"]
[ext_resource type="Script" uid="uid://dk74e55d6fp38" path="res://scripts/states/generic_states/attack_state.gd" id="14_o5sr2"]

[sub_resource type="AtlasTexture" id="AtlasTexture_wbf5k"]
atlas = ExtResource("2_ikdmk")
region = Rect2(0, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tvrjd"]
atlas = ExtResource("2_ikdmk")
region = Rect2(48, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nx7r3"]
atlas = ExtResource("2_ikdmk")
region = Rect2(96, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rdhaw"]
atlas = ExtResource("2_ikdmk")
region = Rect2(144, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_m4uwr"]
atlas = ExtResource("2_ikdmk")
region = Rect2(192, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xa24f"]
atlas = ExtResource("2_ikdmk")
region = Rect2(144, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_31235"]
atlas = ExtResource("2_ikdmk")
region = Rect2(96, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_f4120"]
atlas = ExtResource("2_ikdmk")
region = Rect2(48, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ru012"]
atlas = ExtResource("2_ikdmk")
region = Rect2(0, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yti0t"]
atlas = ExtResource("3_wfyvu")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jdcy1"]
atlas = ExtResource("3_wfyvu")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dmcpi"]
atlas = ExtResource("3_wfyvu")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_062ni"]
atlas = ExtResource("3_wfyvu")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pvdkb"]
atlas = ExtResource("3_wfyvu")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ukv7"]
atlas = ExtResource("3_wfyvu")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c26xy"]
atlas = ExtResource("3_wfyvu")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_y1i7t"]
atlas = ExtResource("3_wfyvu")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_s3ip3"]
atlas = ExtResource("3_wfyvu")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_h77oy"]
atlas = ExtResource("3_wfyvu")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3v221"]
atlas = ExtResource("3_wfyvu")
region = Rect2(320, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ayoef"]
atlas = ExtResource("3_wfyvu")
region = Rect2(352, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ikdmk"]
atlas = ExtResource("3_jjup5")
region = Rect2(0, 0, 32, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_jjup5"]
atlas = ExtResource("3_jjup5")
region = Rect2(32, 0, 32, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_wfyvu"]
atlas = ExtResource("3_jjup5")
region = Rect2(64, 0, 32, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_at850"]
atlas = ExtResource("3_jjup5")
region = Rect2(96, 0, 32, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_wnf82"]
atlas = ExtResource("4_mdcui")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_noxma"]
atlas = ExtResource("4_mdcui")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_s3wuq"]
atlas = ExtResource("4_mdcui")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ke2xt"]
atlas = ExtResource("4_mdcui")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_o5sr2"]
atlas = ExtResource("5_ikdmk")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_84gbg"]
atlas = ExtResource("5_ikdmk")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ji7s"]
atlas = ExtResource("5_ikdmk")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yutl4"]
atlas = ExtResource("5_ikdmk")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4igtm"]
atlas = ExtResource("5_ikdmk")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fqq7q"]
atlas = ExtResource("5_ikdmk")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hhkhi"]
atlas = ExtResource("5_ikdmk")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_84xnm"]
atlas = ExtResource("5_ikdmk")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_42isq"]
atlas = ExtResource("5_ikdmk")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hssac"]
atlas = ExtResource("5_ikdmk")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lyvjc"]
atlas = ExtResource("5_ikdmk")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_e57hx"]
atlas = ExtResource("5_ikdmk")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8apxg"]
atlas = ExtResource("5_ikdmk")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7c32u"]
atlas = ExtResource("5_ikdmk")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kfoio"]
atlas = ExtResource("5_ikdmk")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_t0774"]
atlas = ExtResource("5_ikdmk")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mg1p1"]
atlas = ExtResource("5_ikdmk")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3mvx0"]
atlas = ExtResource("7_at850")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_41lxs"]
atlas = ExtResource("7_at850")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jx6p5"]
atlas = ExtResource("7_at850")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ig2y7"]
atlas = ExtResource("7_at850")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_a1j1j"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wbf5k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tvrjd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nx7r3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rdhaw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m4uwr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xa24f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_31235")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f4120")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ru012")
}],
"loop": false,
"name": &"slime_attack",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yti0t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jdcy1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dmcpi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_062ni")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pvdkb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ukv7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c26xy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y1i7t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s3ip3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h77oy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3v221")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ayoef")
}],
"loop": true,
"name": &"slime_death",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ikdmk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jjup5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wfyvu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_at850")
}],
"loop": true,
"name": &"slime_fall",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wnf82")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_noxma")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s3wuq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ke2xt")
}],
"loop": true,
"name": &"slime_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_o5sr2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_84gbg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ji7s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yutl4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4igtm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fqq7q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hhkhi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_84xnm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_42isq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hssac")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lyvjc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e57hx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8apxg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7c32u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kfoio")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t0774")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mg1p1")
}],
"loop": true,
"name": &"slime_patrol",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3mvx0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_41lxs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jx6p5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ig2y7")
}],
"loop": true,
"name": &"slime_take_damage",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gstla"]
size = Vector2(22, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6axq5"]
size = Vector2(20, 14)

[node name="Slime" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 11
script = ExtResource("1_68p8s")

[node name="RayCastRight" type="RayCast2D" parent="."]
visible = false
position = Vector2(0, 6)
target_position = Vector2(13, 0)

[node name="RayCastLeft" type="RayCast2D" parent="."]
visible = false
position = Vector2(0, 6)
target_position = Vector2(-13, 0)

[node name="Animations" type="AnimatedSprite2D" parent="."]
position = Vector2(4.76837e-07, -4)
scale = Vector2(0.671875, 0.671875)
sprite_frames = SubResource("SpriteFrames_a1j1j")
animation = &"slime_take_damage"
autoplay = "slime_idle"

[node name="EnemyDamageZone" parent="." instance=ExtResource("2_68p8s")]
position = Vector2(0, -0.5)

[node name="AttackCollision" type="CollisionShape2D" parent="EnemyDamageZone"]
position = Vector2(0, -1.5)
shape = SubResource("RectangleShape2D_gstla")

[node name="SlimeCollision" type="CollisionShape2D" parent="."]
position = Vector2(0, -1)
shape = SubResource("RectangleShape2D_6axq5")

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("starting_state")]
script = ExtResource("9_nx7r3")
starting_state = NodePath("IdleState")

[node name="IdleState" type="Node" parent="StateMachine" node_paths=PackedStringArray("next_state", "fall_state")]
script = ExtResource("11_tvrjd")
idle_animation = "slime_idle"
next_state = NodePath("../PatrolState")
fall_state = NodePath("../FallState")
use_idle_timer = true

[node name="PatrolState" type="Node" parent="StateMachine" node_paths=PackedStringArray("fall_state", "idle_state")]
script = ExtResource("13_nx7r3")
move_animation = "slime_patrol"
fall_state = NodePath("../FallState")
idle_state = NodePath("../IdleState")
use_idle_timer = true
raycast_right_path = NodePath("../../RayCastRight")
raycast_left_path = NodePath("../../RayCastLeft")

[node name="JumpState" type="Node" parent="StateMachine"]
script = ExtResource("12_rdhaw")

[node name="FallState" type="Node" parent="StateMachine" node_paths=PackedStringArray("next_state")]
script = ExtResource("13_m4uwr")
fall_animation = "slime_fall"
next_state = NodePath("../IdleState")

[node name="AttackState" type="Node" parent="StateMachine" node_paths=PackedStringArray("next_state")]
script = ExtResource("14_o5sr2")
attack_animation = "slime_attack"
next_state = NodePath("../IdleState")

[connection signal="animation_finished" from="Animations" to="StateMachine/AttackState" method="animation_finished"]
